--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
 			<artifactId>jfoenix</artifactId>
 			<version>8.0.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-gson</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
